--- a/src/app/pages/adblocker/adblocker.component.html
+++ b/src/app/pages/adblocker/adblocker.component.html
@@ -1,3 +1,3 @@
 <div class="h-[80vh] w-full flex items-center justify-center bg-cover bg-center text-center">
-  <h1 class="text-xl font-semibold dark:text-white text-center">Please disable <span class="text-danger">Adblocker</span> or <span class="text-danger">Brave shield</span>.<br>Or you can purchase a monthly subscription to disable ads.</h1>
+  <h1 class="text-xl font-semibold dark:text-white text-center">Please disable <span class="text-danger">Adblocker</span> or <span class="text-danger">Brave shield</span>.<br>Ads will help maintain this tool. Thank you!.</h1>
 </div>
